--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="theCrunch.html" style="color: white;"> Home </a>
+                        <a class="nav-link" href="index.html" style="color: white;"> Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="theCrunch.html" style="color: white;"> About Us </a>
+                        <a class="nav-link" href="index.html" style="color: white;"> About Us </a>
                     </li>
                 </ul>
             </div>
@@ -84,7 +84,7 @@
             <div class="modal-content">
                 <span id="close">&times;</span>
                 <h1>Newsletter Signup</h1>
-                <form action="./theCrunch.html" method="POST" novalidate>
+                <form action="./index.html" method="POST" novalidate>
                     <p>Enter your email:</p>
                     <input type="text" />
                     <button id="submit" type="submit" class="signUpButton">Sign Up!</button>
@@ -96,7 +96,7 @@
             <p>All Rights Reserved.</p>
         </div>
 
-        <script type="text/javascript" src="./theCrunch.js"></script>
+        <script type="text/javascript" src="./example.js"></script>
     </body>
 
 </html>
